--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,7 +14,7 @@ website:
       - href: index.qmd
         text: Home
       - href: cv
-        text: CV/Resume
+        text: CV & Resume
       - href: publications
         text: Publications
       - href: blog
