overall community/outreach/hobbies section

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,7 +27,7 @@ website:
       - href: about
         text: About Me
       - href: community
-        text: Community & Outreach
+        text: Community & Hobbies
   # twitter-card: true
   # open-graph: true
 
