playing with google indexing

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,6 +5,7 @@ project:
     - CNAME
     - overleaf_presentations
     - files/site_icon/apple-touch-icon.png
+    - googleffaf8e4b1a20676c.html
 
 website:
   title: "Evanns Morales-Cuadrado |<br>
